--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-scripts": "3.4.1",
+    "react-slideshow-image": "^1.4.2",
     "styled-components": "^5.1.1"
   },
   "scripts": {
